--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: S3 기존 파일들 삭제 후 새로 업로드
         run: |
-          aws s3 rm --resursive s3://dev-cicd-sandbox
+          aws s3 rm --recursive s3://dev-cicd-sandbox
           aws s3 cp ./dist s3://dev-cicd-sandbox/ --recursive
 
       - name: CloudFront 캐시 무효화
